test/functions/typeMethods/inherit-owned-shared.good
inherit-owned-shared.chpl:7: warning: mOwned
inherit-owned-shared.chpl:8: warning: mShared
inherit-owned-shared.chpl:10: error: done
